--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,17 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "in.co.snapqa.clientapp0903"
-        minSdkVersion 22
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,6 +30,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    // this line must be included to integrate with Firebase
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
     compile 'com.msg91.sendotp.library:library:2.9'
     compile 'com.msg91.sendotp.library:library:2.9'
     compile 'com.android.support:appcompat-v7:25.3.0'
@@ -44,6 +54,10 @@ dependencies {
     compile 'com.github.andremion:counterfab:1.0.1'
     compile 'com.github.medyo:fancybuttons:1.8.3'
     compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
+    compile 'com.google.android.gms:play-services-places:9.2.0'
     compile 'com.tuenti.smsradar:library:1.0.4'
     compile 'com.github.SubhrajyotiSen:library:1.1.1'
     compile 'com.keiferstone:nonet:2.0.0'
@@ -52,3 +66,7 @@ dependencies {
     compile 'com.github.paolorotolo:appintro:4.0.0'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
+
+
+
