--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
 
+    <service android:name=".MyFirebaseMessagingService">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+    <service android:name=".FirebaseIDService">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+        </intent-filter>
+    </service>
     <service
         android:name=".SmsRadarService"
         android:exported="false"
@@ -29,6 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d2ecffe0e3c85336a456d1db1c4725ea72824929"
+            />
         <activity
             android:name=".WelcomActivity"
             android:label="appIntro"
@@ -39,26 +53,44 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SelectSubjectActivity" />
+        <activity android:name=".SelectSubjectActivity" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".TutorSettings" />
+        </activity>
         <activity
             android:name=".TutorProfile"
-            android:label="Tutor Profile" />
+            android:label="Tutor Profile" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".Historyactivity"
-            android:label="History" />
+            android:label="History" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".TutorProfile" />
+        </activity>
         <activity
             android:name=".TutorSettings"
             android:label="@string/title_activity_tutor_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".TutorProfile" />
+        </activity>
         <activity android:name=".VerifyOTPActivity" />
         <activity android:name=".PaymentDetailsActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ChangePasswordActivity" />
+        <activity android:name=".Firebase" />
 
         <receiver
             android:name=".NotificationMessage"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
+
     </application>
 
 </manifest>
